[gd_scene load_steps=37 format=2]

[ext_resource path="res://characters/enemies/mobs/necromancer/scripts/Necromancer.gd" type="Script" id=1]
[ext_resource path="res://characters/enemies/mobs/skeleton_warrior/assets/BarV6_Bar.png" type="Texture" id=2]
[ext_resource path="res://characters/enemies/mobs/skeleton_warrior/assets/BarV6_ProgressBar.png" type="Texture" id=3]
[ext_resource path="res://characters/enemies/mobs/necromancer/assets/Necromancer-Sheet.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.0
height = 32.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackArea/AttackCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "death"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 84, 85, 86, 87, 88, 89, 90, 91, 92, 93 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "hit"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 56, 57, 58, 59 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=6]
resource_name = "melee"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123, 124, 125 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackArea/AttackCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=7]
resource_name = "run"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31, 32, 33, 34, 35 ]
}

[sub_resource type="Animation" id=8]
resource_name = "spell"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "cast_spell"
} ]
}

[sub_resource type="Animation" id=9]
resource_name = "walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 18, 19, 20, 21 ]
}

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "death"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "hit"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "melee"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "spell"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=22]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=38]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=32]
states/death/node = SubResource( 10 )
states/death/position = Vector2( 277, 96 )
states/hit/node = SubResource( 11 )
states/hit/position = Vector2( 374, 302 )
states/idle/node = SubResource( 12 )
states/idle/position = Vector2( 619, 186 )
states/melee/node = SubResource( 13 )
states/melee/position = Vector2( 768, 332 )
states/spell/node = SubResource( 15 )
states/spell/position = Vector2( 878, 186 )
states/walk/node = SubResource( 16 )
states/walk/position = Vector2( 619, 78 )
transitions = [ "idle", "walk", SubResource( 17 ), "spell", "idle", SubResource( 21 ), "melee", "idle", SubResource( 22 ), "walk", "spell", SubResource( 23 ), "idle", "hit", SubResource( 24 ), "walk", "hit", SubResource( 25 ), "idle", "death", SubResource( 27 ), "walk", "death", SubResource( 28 ), "spell", "death", SubResource( 30 ), "melee", "death", SubResource( 31 ), "walk", "melee", SubResource( 35 ), "spell", "melee", SubResource( 36 ), "death", "idle", SubResource( 37 ), "hit", "idle", SubResource( 38 ) ]
graph_offset = Vector2( 137, 30 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=33]

[sub_resource type="RectangleShape2D" id=34]
extents = Vector2( 25, 29 )

[node name="Necromancer" type="KinematicBody2D" groups=["Enemy"]]
scale = Vector2( 2, 2 )
collision_layer = 8
collision_mask = 81
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -3, 0 )
texture = ExtResource( 5 )
hframes = 14
vframes = 12
frame = 1

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7 )
shape = SubResource( 1 )

[node name="Animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/death = SubResource( 3 )
anims/hit = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/melee = SubResource( 6 )
anims/run = SubResource( 7 )
anims/spell = SubResource( 8 )
anims/walk = SubResource( 9 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 32 )
anim_player = NodePath("../Animation")
active = true
parameters/playback = SubResource( 33 )

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 20

[node name="AttackCollision" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 4, 0 )
shape = SubResource( 34 )
disabled = true

[node name="PlayerDetectionMeleeArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="PlayerDetectionCollision" type="CollisionShape2D" parent="PlayerDetectionMeleeArea"]
position = Vector2( 4, 0 )
shape = SubResource( 34 )

[node name="SpellSpawn" type="Position2D" parent="."]
position = Vector2( 25, 3 )

[node name="Raycasts" type="Node2D" parent="."]

[node name="SpellRaycast" type="RayCast2D" parent="Raycasts"]
position = Vector2( 0, 3 )
enabled = true
cast_to = Vector2( 150, 0 )
collision_mask = 4

[node name="PlayerOnBackRaycast" type="RayCast2D" parent="Raycasts"]
position = Vector2( 0, 3 )
enabled = true
cast_to = Vector2( -50, 0 )
collision_mask = 16

[node name="FloorRaycast" type="RayCast2D" parent="Raycasts"]
position = Vector2( 7, 19.5 )
enabled = true
cast_to = Vector2( 0, 12 )

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -27.0
margin_top = -25.0
margin_right = 245.0
margin_bottom = -4.0
rect_scale = Vector2( 0.2, 0.2 )
max_value = 300.0
value = 300.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )
texture_progress_offset = Vector2( 3, 2 )

[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_entered" from="PlayerDetectionMeleeArea" to="." method="_on_PlayerDetectionMeleeArea_body_entered"]
